# bazel-electron

./: BUILD.bazel  README.md  WORKSPACE  bundle.go  electron.bzl  index.html  main.js  run.sh.tpl
